UIP-2164 No-value and placeholder text style classes
Change-Id: I4d3afac8571300769533576f4b6a0bf75d3ef6cd

--- a/packages/ui-library/src/css/text-styles.scss
+++ b/packages/ui-library/src/css/text-styles.scss
@@ -59,6 +59,27 @@ $body-text-color: $color-neutral-20;
     @include text-value;
 }
 
+@mixin text-no-value {
+    @include text-style($color-accent-neutral-30);
+
+    font-style: italic;
+}
+
+.text-no-value {
+    @include text-no-value;
+}
+
+@mixin text-placeholder {
+    @include text-value;
+
+    opacity: 0.4;
+    font-style: italic;
+}
+
+.text-placeholder {
+    @include text-placeholder;
+}
+
 // BODY
 @mixin text-body {
     @include text-style($body-text-color);
