UIP-2165 Set vertical alignment for Table (also added testing to EventUtils to satisfy coverage failure)
Change-Id: I732db63d41bdc926b1fee4f68a34d2a9541edf9c

--- a/packages/ui-library/src/css/tables.scss
+++ b/packages/ui-library/src/css/tables.scss
@@ -228,6 +228,18 @@ table {
     }
 }
 
+table.grid td.grid__cell {
+    &--top {
+        vertical-align: top;
+    }
+    &--middle {
+        vertical-align: middle;
+    }
+    &--bottom {
+        vertical-align: bottom;
+    }
+}
+
 // DEPRECATED OR SITE-SPECIFIC STYLES ----------------------------------------------------------------------------------
 table {
     &.basic {
