--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -704,6 +704,10 @@ input[type=file] {
 .input-color-picker,
 .input-calendar {
     margin: 0 10px 20px 0;
+
+    &:last-child {
+        margin-right: 0;
+    }
 }
 
 .radio-text-input {
