UIP-2181 Text component style precendence
Change-Id: Ia47b759eb26dcd91b35d55485566f5babfb3de36

--- a/packages/ui-library/src/css/text.scss
+++ b/packages/ui-library/src/css/text.scss
@@ -64,6 +64,14 @@
     text-align: center;
 }
 
+.text-component {
+    margin: 0 0 10px;
+
+    &:last-child {
+        margin-bottom: 0;
+    }
+}
+
 .textblock {
     color: $color-elephant;
     font-size: 14px;
