UIP-2186 Fix demo css conflicts
Change-Id: Idabbfc573ac230cef61486a2a5041a11e9727d9c

--- a/packages/ui-library/src/demo/css/ui-library-demo.scss
+++ b/packages/ui-library/src/demo/css/ui-library-demo.scss
@@ -11,6 +11,15 @@
 @import 'tutorial';
 @import 'cannonball';
 
+
+// End User files need to be included but end-user.scss itself will override some defaults from ui-library.scss
+// Just the individual files need to be included
+@import '../../css/end-user/_user-nav.scss';
+@import '../../css/end-user/_device-table.scss';
+@import '../../css/end-user/_card-modal.scss';
+@import '../../css/end-user/_device-icon.scss';
+
+
 // COMPONENTS
 #content {
 
