UIP-2193 icon size prop and aligment styling and created the License Template
Change-Id: I1a132d1a2b080747dea4be62703a54512b83dfce

--- a/packages/ui-library/src/css/icons.scss
+++ b/packages/ui-library/src/css/icons.scss
@@ -62,10 +62,32 @@ a.icon-clear {
 
 .icon {
     @include inline-flex;
+    &__graphic {
+        padding: 0 8px 0 0;
+        &--size-sm {
+            font-size: 100%;
+        }
+        &--size-md {
+            font-size: 150%;
+        }
+        &--size-lg {
+            font-size: 200%;
+        }
+        &--size-xl {
+            font-size: 250%;
+        }
+        &--size-xxl {
+            font-size: 300%;
+        }
+    }
 }
 
-.icon__graphic {
-    padding: 0 8px 0 0;
+.icon__container {
+    @include inline-flex;
+    align-items: flex-start;
+    .icon__content {
+        padding-left: $spacing-xs;
+    }
 }
 
 .icon__rounded {
