--- a/packages/ui-library/src/css/layout/_stack.scss
+++ b/packages/ui-library/src/css/layout/_stack.scss
@@ -19,6 +19,10 @@ div.stack,
         }
     }
 
+    &--zero > * {
+        margin-bottom: 0;
+    }
+
     &--xs > * {
         margin-bottom: $spacing-xs;
     }
