UIP-2197 Make Calendar progressively stateful and remove deprecated lifecycle hooks
Change-Id: I0b6578d3fc2f9d9bd790e3cef59e745ceac1daa0

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -1611,7 +1611,8 @@ input[type=file] {
 
 // make styles work for popper container version
 .calendar-popup {
-    &.popper-container {
+    &.popper-container[x-placement^='bottom'],
+    &.popper-container[x-placement^='top'] {
         margin-top: 0;
         margin-bottom: 0;
     }
