UIP-2202 fixed line height for small rocker button specifically in stat area card
Change-Id: Ie07b2c2fdfb598b9b9b96da91da5ac872a8b2d58

--- a/packages/ui-library/src/css/layout/_charts.scss
+++ b/packages/ui-library/src/css/layout/_charts.scss
@@ -80,12 +80,11 @@
 .rocker-button--chart-rocker-small {
     $button-width: 64px;
     $button-height: 22px;
-
-    font-family: 'ProximaNova-Medium';
+    @include font-pn-regular;
     font-size: 10px;
     height: $button-height;
     label {
-        line-height: 25px;
+        line-height: $button-height + 1;
         width: $button-width;
     }
     &.sel-0,
