UIP-2145 removed introTutorial from the library. Left introTutorial CSS becasue doc might still pull it. Its hard to tell cause cant run dock locally
Change-Id: I8e16ec52cef1c80baf6e83f86e8a9c66731724dd

--- a/packages/ui-library/src/css/tutorial.scss
+++ b/packages/ui-library/src/css/tutorial.scss
@@ -1,3 +1,6 @@
+
+//Unsure if the dock is pulling the css file. They have similarities but,
+// best for now to keep the css file.
 .introOverlay {
     background: rgba($color-black, 0.6);
     width: 100%;
