UIP-2087 Breaking change warnings for all components that take the 'use-portal' flag
Change-Id: I3b4da78a82f5dcd9abf60fdbed717288882a6777

--- a/packages/ui-library/src/css/details-tooltip/_popper-container.scss
+++ b/packages/ui-library/src/css/details-tooltip/_popper-container.scss
@@ -1,6 +1,6 @@
 .popper-container {
     box-sizing: content-box;
-    z-index: 1500;
+    z-index: $zindex__popover;
 
     &[x-placement^='bottom'] {
         margin-top: 10px + $spacing-xs;
@@ -40,10 +40,6 @@
             left: 0;
             transform: translateX(-100%);
         }
-    }
-
-    &[x-out-of-boundaries] &__pointer {
-        visibility: hidden;
     }
 
     &.input-select {
