UIP-2191: Created sandbox whitelist template
Change-Id: I62b9d9801c2596b2f4633fb0c9abdce5b7f63f24

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -1696,6 +1696,10 @@ input[type=file] {
         border: none;
     }
 
+    &__multi-add-panel {
+        margin-top: $spacing-xs;
+    }
+
     &__note {
         color: $color-strong-neutral-50;
         font-size: $font-size-reduced;
