--- a/packages/ui-library/src/css/layout/_aside-container.scss
+++ b/packages/ui-library/src/css/layout/_aside-container.scss
@@ -36,5 +36,11 @@
 
             text-align: right;
         }
+
+        &--right {
+            @include flexbox-grow(0);
+
+            margin-left: auto;
+        }
     }
 }
