--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -14,6 +14,7 @@
 @import 'layout/aside-container';
 @import 'layout/stretch-content';
 @import 'layout/_list-nav.scss';
+@import 'layout/flex-row';
 @import 'templates/expandable-row-tooltip.scss';
 @import 'templates/section-columns';
 
