UIP-2207 added box-sizing and padding to make heatmap work on firefox. Makes Google version a little smaller but not much
Change-Id: I08dc99f32f23c517a558b3a9e4b0a88eb162a577

--- a/packages/ui-library/src/css/layout/_charts.scss
+++ b/packages/ui-library/src/css/layout/_charts.scss
@@ -130,6 +130,8 @@
     }
 
     .help-tooltip {
+        box-sizing: border-box;
+        padding-top: 12px;
         position: relative;
         height: $cell-size;
         width: $cell-size;
