UIP-2241 fixed phone error input issue
Change-Id: Ied5b4c6e2c36c4d13e4408dd53e5507aea7ea4e7

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -860,6 +860,7 @@ input[type=file] {
 @import 'inputs/dropdown';
 
 .input-custom-select {
+    padding: $borderSize;
     display: inline-block;
     vertical-align: top;
     text-align: left;
