--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -79,6 +79,7 @@ $icon-on-off: "\e910";
 $icon-org-chart: "\e915";
 $icon-overview: "\6f";
 $icon-pin: "\4e";
+$icon-play: "\e900";
 $icon-plus: "\2b";
 $icon-plus-rounded: "\2a";
 $icon-population: "\e923";
