--- a/packages/ui-library/src/css/icons/_style.scss
+++ b/packages/ui-library/src/css/icons/_style.scss
@@ -418,6 +418,11 @@
     content: $icon-pin;
   }
 }
+.icon-play {
+  &:before {
+    content: $icon-play;
+  }
+}
 .icon-plus {
   &:before {
     content: $icon-plus;
