--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -15,6 +15,7 @@
 @import 'layout/stretch-content';
 @import 'layout/_list-nav.scss';
 @import 'layout/flex-row';
+@import 'layout/padding';
 @import 'templates/expandable-row-tooltip.scss';
 @import 'templates/section-columns';
 
