UIP-2066 : add new password secure-o-meter
Change-Id: I9b9e8b65c7356f55b70f9757c823a3813b526489

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -218,6 +218,10 @@ label {
         &--mono input {
             font-family: 'Consolas', 'Monaco', 'Andale Mono', monospace;
         }
+
+        .password-meter {
+            margin: 6px 0 0;
+        }
     }
 
     &.input-textarea {
