--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -16,6 +16,7 @@
 @import 'layout/_list-nav.scss';
 @import 'layout/flex-row';
 @import 'layout/padding';
+@import 'password-meter';
 @import 'templates/expandable-row-tooltip.scss';
 @import 'templates/section-columns';
 
