--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -46,6 +46,7 @@ $icon-edit: "\65";
 $icon-error-triangle: "\e914";
 $icon-expand: "\45";
 $icon-expand-arrow: "\59";
+$icon-facebook: "\e929";
 $icon-file: "\2c";
 $icon-filter: "\66";
 $icon-fingerprint: "\e909";
@@ -61,6 +62,7 @@ $icon-info: "\49";
 $icon-key: "\4b";
 $icon-left: "\3c";
 $icon-link: "\6b";
+$icon-linkedin: "\e92b";
 $icon-lock: "\42";
 $icon-lock-large: "\4c";
 $icon-lockout: "\e912";
@@ -122,6 +124,7 @@ $icon-success: "\79";
 $icon-support: "\71";
 $icon-tag: "\e91b";
 $icon-terminal: "\e90c";
+$icon-twitter: "\e92a";
 $icon-thumb: "\54";
 $icon-undo: "\6e";
 $icon-user: "\75";
