UIP-2110 Progressively stateful SelectionList
Change-Id: Ib708bd9bf521df76d4311b818051dfc33f0752a8

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -1717,7 +1717,7 @@ input[type=file] {
     }
 
     &__multi-add-panel {
-        margin-top: $spacing-xs;
+        margin-top: $spacing-sm;
     }
 
     &__note {
