UIP-2225: Created Social Login template
Change-Id: I0c8bff5e26e11f93f249a754fb10a34478157bfa

--- a/packages/ui-library/src/css/layout/_flex-row.scss
+++ b/packages/ui-library/src/css/layout/_flex-row.scss
@@ -17,14 +17,17 @@
     }
 
     &--align-bottom {
+        align-content: flex-end;
         align-items: flex-end;
     }
 
     &--align-center {
+        align-content: center;
         align-items: center;
     }
 
     &--align-top {
+        align-content: flex-start;
         align-items: flex-start;
     }
 }
