--- a/packages/ui-library/src/css/list/_column-selector.scss
+++ b/packages/ui-library/src/css/list/_column-selector.scss
@@ -89,6 +89,11 @@
             }
         }
 
+        &--disabled {
+            background-color: transparent;
+            cursor: default;
+        }
+
         & .column-selector {
             &__row {
                 border: none;
